# PixOMP

./: CMakeLists.txt  README.md  config.h  main.cpp
CLI/: main.cpp  options.h  parser.cpp  parser.h
include/: image.h  image_process.h  read_image.h  write_image.h
include/convertor/: color_math.h  gray_convertor.h  image_convert.h  rgb_convertor.h  ycb_convertor.h
include/executor/: auto_executor.h  executor.h  manual_executor.h  single_executor.h
include/operation/: contrast_op.h  operation.h
include/operation/resize/: bicubic_resize.h  bilinear_resize.h  near_resize.h  resize_op.h
src/: image_process.cpp  read_image.cpp  write_image.cpp
src/convertor/: gray_convertor.cpp  rgb_convertor.cpp  ycb_convertor.cpp
src/executor/: auto_executor.cpp  manual_executor.cpp  single_executor.cpp
src/operation/: contrast_op.cpp
src/operation/resize/: bicubic_resize.cpp  bilinear_resize.cpp  near_resize.cpp
